Fixed issue with preview image div size not responsive

--- a/src/App.css
+++ b/src/App.css
@@ -93,18 +93,19 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .product-div {
-  height: 100vh;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  /* justify-content: center;
+  align-items: center; */
 }
 
 .preview-image {
   text-align: center;
-  max-width: auto;
-  height: 100%;
   cursor: pointer;
   margin-right: 20px;
+  position: relative;
+  background-repeat: no-repeat;
+  background-size: auto 50%;
+  background-position: center center;
 }
 
 .preview-image-active {
